--- a/package.json
+++ b/package.json
@@ -92,12 +92,12 @@
     "cypress": "^11.0.0",
     "eslint": "~8.12.0",
     "eslint-config-next": "13.0.0",
-    "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
