--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,5 +19,5 @@
       "@react-monorepo/ui-core": ["libs/ui-core/src/index.ts"]
     }
   },
-  "exclude": ["node_modules", "tmp"]
+  "exclude": ["node_modules", "tmp", "dist", ".vscode"]
 }
