--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.3",
   "license": "MIT",
   "scripts": {
-    "start": "nx serve --port=3000",
+    "start": "nx serve --port=4200",
     "dev": "nx run commerce:serve:development",
     "build": "nx run commerce:build",
     "serve": "nx run-many --target=serve",
@@ -27,7 +27,9 @@
     "@hookform/resolvers": "^3.0.1",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
+    "@mui/styles": "^5.12.0",
     "@next-auth/mongodb-adapter": "^1.1.1",
     "@nrwl/devkit": "^15.0.0",
     "@nrwl/nx-plugin": "^15.9.2",
@@ -40,12 +42,15 @@
     "cors": "^2.8.5",
     "env-cmd": "^10.1.0",
     "eslint-config-airbnb": "^19.0.4",
+    "hard-source-webpack-plugin": "^0.13.1",
+    "i18next": "^22.4.14",
     "jsonc-eslint-parser": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "next": "13.0.0",
     "next-auth": "^4.22.0",
     "next-connect": "^0.13.0",
+    "next-i18next": "^13.2.2",
     "node-fetch": "2.6.1",
     "pino": "^8.7.0",
     "pino-pretty": "^9.1.1",
@@ -53,6 +58,9 @@
     "react-devtools": "^4.26.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-hot-loader": "^4.13.1",
+    "react-i18next": "^12.2.0",
+    "react-intl": "^6.3.2",
     "react-is": "18.2.0",
     "regenerator-runtime": "0.13.7",
     "styled-components": "5.3.5",
